2007-06-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* docs/tkcon.1.man, docs/tkcon.n.man, docs/tkconrc.5.man (new): 
	* docs/dump.n.man, docs/observe.n.man, docs/idebug.n.man (new): 
	* index.html, docs/demopic.gif (removed), docs/demopic.png (new):
	* docs/plugin.html, docs/start.html, docs/tkcon.html:
	Updated docs and added doctools equivalents courtesy Sergei Golovan
	* docs/style.css: updated stylesheet
	
2007-04-04  Jeff Hobbs  <jeffh@ActiveState.com>

	*** BUMPED TO VERSION 2.5 ***

	* tkcon.tcl: ensure option overrides only effect tkcon and
	subwidgets.
	(edit): Add -wrap option to 'edit' command.
	(::tkcon::AtSource): adjust argv0 existence check

2006-09-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::NewTab, ::tkcon::GetSlave): ensure that new
	tabs in other toplevel tkcon windows are built in the correct
	slave hierarchy.

	* pkgIndex.tcl: sample pkgIndex.tcl that allows using tkcon as a
	package.

	* tkcon.tcl (::tkcon::InitSlave): adjust to make the first file
	passed in to be argv0 in the slave

2006-08-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (tkcon): default wm protocol to hide tkcon when used
	in embedded context.

2006-08-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: remove use of -exact in package require Tk

2006-06-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: updated to handle ttk scrollbars as well as other UI
	cleanup.

2006-06-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: modify CVS location after SF changes

	* README.txt: correct reference email address

2006-02-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (tkcon): update 'gets stdin' override (tkcon congets)
	to support usage at script load time. (decoster)

2006-01-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (MenuConfigure): Fix ActiveTcl Help link when pointing
	to a file with space in path. [Bug 1408425]
	(::tkcon::Save, ::tkcon::Load): in VFS paths, use the X11 dialogs
	that support viewing in VFS dirs.
